--- a/src/components/collections/Section2CollectionDetail.css
+++ b/src/components/collections/Section2CollectionDetail.css
@@ -17,7 +17,7 @@
 }
 
 .collection-detail-subtitle {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -30,7 +30,7 @@
 }
 
 .collection-detail-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-weight: 300;
   font-style: normal;
   font-size: 64px;
@@ -42,7 +42,7 @@
 }
 
 .collection-detail-description {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
