--- a/src/components/hoverExpandSection/HoverExpand.css
+++ b/src/components/hoverExpandSection/HoverExpand.css
@@ -18,7 +18,7 @@
 }
 
 .hover-expand-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-size: clamp(42px, 5vw, 64px);
   font-weight: 400;
   letter-spacing: 2px;
@@ -27,7 +27,7 @@
 }
 
 .hover-expand-subtitle {
-  font-family: "BT-BeauSans-Regular-ttf", serif;
+  font-family: "BT Beau Sans", serif;
   font-size: clamp(10px, 1.5vw, 18px);
   font-weight: 300;
   margin: -20px 0 0 0;
@@ -141,7 +141,6 @@
     font-size: clamp(24px, 6vw, 36px);
   }
 
-
   .hover-expand-gallery {
     flex-wrap: wrap;
     height: 65vh !important;
@@ -175,7 +174,6 @@
     font-size: clamp(20px, 8vw, 28px);
     margin-bottom: 4px;
   }
-
 
   .hover-expand-gallery {
     flex-wrap: wrap;
