--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -78,7 +78,7 @@
 }
 
 .footer-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-weight: 300;
   font-style: normal;
   font-size: 24px;
@@ -105,7 +105,7 @@
 }
 
 .footer-links a {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -128,7 +128,7 @@
 }
 
 .contact-info p {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -153,7 +153,7 @@
 }
 
 .newsletter-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-size: 58px;
   font-weight: 300;
   letter-spacing: 3px;
@@ -164,7 +164,7 @@
 }
 
 .newsletter-subtitle {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.8);
   margin-bottom: 43px;
@@ -182,7 +182,7 @@
 }
 
 .email-input {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   flex: 1;
   max-width: 500px;
   padding: 15px 20px;
@@ -226,7 +226,7 @@
 
 /* Button thật sự bên trong, đóng vai trò là NỀN */
 .signup-button {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   padding: 12px 25px;
 
   /* Nền trong suốt để thấy màu gradient của footer */
@@ -283,7 +283,7 @@
 }
 
 .footer-bottom-left p {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-size: 14px;
   color: rgba(255, 255, 255, 0.7);
   margin: 0;
@@ -334,7 +334,7 @@
 }
 
 .legal-link {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-size: 14px;
   color: rgba(255, 255, 255, 0.7);
   text-decoration: none;
