--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -80,7 +80,7 @@
 
 .menu-text {
   color: white;
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -97,7 +97,7 @@
   background: transparent;
   color: white;
   padding: 8px 16px;
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -158,7 +158,7 @@
 }
 
 .menu-popup li {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #e0e0e0;
