--- a/src/components/parallaxScrolling/ParallaxScrolling.css
+++ b/src/components/parallaxScrolling/ParallaxScrolling.css
@@ -92,7 +92,7 @@
 }
 
 .text-content h4 {
-  font-family: "BT-BeauSans-Medium-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
@@ -104,7 +104,7 @@
 }
 
 .text-content h1 {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-weight: 300;
   font-style: normal;
   font-size: 64px;
@@ -116,7 +116,7 @@
 }
 
 .text-content p {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
