--- a/src/components/sameCollection/SameCollection.css
+++ b/src/components/sameCollection/SameCollection.css
@@ -20,7 +20,7 @@
 }
 
 .same-collection-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-weight: 300;
   font-style: normal;
   font-size: 64px;
@@ -32,7 +32,7 @@
 }
 
 .same-collection-description {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
