--- a/src/components/section5Products/Section5Products.css
+++ b/src/components/section5Products/Section5Products.css
@@ -37,7 +37,7 @@
 }
 
 .hero-content h4 {
-  font-family: "SaolDisplay-Regular-otf", sans-serif;
+  font-family: "Saol Display", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -49,7 +49,7 @@
 }
 
 .hero-content h1 {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-weight: 300;
   font-style: normal;
   font-size: 64px;
@@ -61,7 +61,7 @@
 }
 
 .hero-content p {
-  font-family: "SaolDisplay-Regular-otf", sans-serif;
+  font-family: "Saol Display", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
