--- a/src/components/services/section3/Section3.css
+++ b/src/components/services/section3/Section3.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   /* filter: grayscale(100%); */
 }
 
@@ -41,7 +41,7 @@
 }
 
 .section3-title {
-  font-family: "SaolDisplay-Light-ttf", serif;
+  font-family: "Saol Display", serif;
   font-size: 64px;
   font-weight: 300;
   line-height: 90%;
@@ -53,7 +53,7 @@
 }
 
 .section3-description {
-  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
+  font-family: "BT Beau Sans", sans-serif;
   font-size: 16px;
   font-weight: 500;
   font-style: normal;
