--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
-  --font-primary: 'BT-BeauSans-Regular-ttf', sans-serif;
-  --font-secondary: 'SaolDisplay-Regular-ttf', serif;
+  --font-primary: "BT Beau Sans", sans-serif;
+  --font-secondary: "Saol Display", serif;
 
   --dl-layout-size-large: 144px;
   --dl-layout-size-small: 48px;
@@ -14,12 +14,12 @@
   --dl-color-default-gray2: rgba(223, 223, 223, 1);
   --dl-color-default-gray3: rgba(120, 120, 120, 1);
   --dl-color-default-white: rgba(255, 255, 255, 1);
-  --dl-color-theme-accent1: #FFFFFF;
-  --dl-color-theme-accent2: #F5D1B0;
+  --dl-color-theme-accent1: #ffffff;
+  --dl-color-theme-accent2: #f5d1b0;
   --dl-layout-radius-round: 50%;
   --dl-layout-size-xxlarge: 288px;
-  --dl-color-theme-primary1: #BF4408;
-  --dl-color-theme-primary2: #E65103;
+  --dl-color-theme-primary1: #bf4408;
+  --dl-color-theme-primary2: #e65103;
   --dl-layout-size-maxwidth: 1400px;
   --dl-layout-radius-radius2: 2px;
   --dl-layout-radius-radius4: 4px;
@@ -28,14 +28,14 @@
   --dl-layout-space-sixunits: 96px;
   --dl-layout-space-twounits: 32px;
   --dl-color-default-gradient: rgba(173, 173, 173, 1);
-  --dl-color-theme-secondary1: #FFFFFF;
-  --dl-color-theme-secondary2: #FBF1EB;
+  --dl-color-theme-secondary1: #ffffff;
+  --dl-color-theme-secondary2: #fbf1eb;
   --dl-layout-space-fiveunits: 80px;
   --dl-layout-space-fourunits: 64px;
   --dl-layout-space-threeunits: 48px;
   --dl-color-theme-neutral-dark: #191818;
   --dl-layout-radius-cardradius: 8px;
-  --dl-color-theme-neutral-light: #FBFAF9;
+  --dl-color-theme-neutral-light: #fbfaf9;
   --dl-layout-radius-imageradius: 8px;
   --dl-layout-radius-inputradius: 24px;
   --dl-layout-radius-buttonradius: 24px;
@@ -45,7 +45,7 @@
   --dl-color-default-transparentwhite50: rgba(255, 255, 255, 0.5);
   --dl-color-default-transparentwhite70: rgba(255, 255, 255, 0.699999988079071);
 }
- 
+
 .button {
   color: var(--dl-color-theme-neutral-dark);
   display: inline-block;
@@ -55,7 +55,7 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
- 
+
 .input {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -65,7 +65,7 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
- 
+
 .textarea {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -75,7 +75,7 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
- 
+
 .list {
   width: 100%;
   margin: 1em 0px 1em 0px;
@@ -84,16 +84,16 @@
   list-style-type: none;
   list-style-position: outside;
 }
- 
+
 .list-item {
   display: list-item;
 }
- 
+
 .teleport-show {
   display: flex !important;
   transform: none !important;
 }
- 
+
 .thq-input {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -106,11 +106,11 @@
   border-radius: var(--dl-layout-radius-inputradius);
   background-color: var(--dl-color-theme-neutral-light);
 }
- 
+
 .thq-input:focus {
   outline: 1px solid var(--dl-color-theme-primary1);
 }
- 
+
 .thq-button-filled {
   gap: var(--dl-layout-space-halfunit);
   fill: var(--dl-color-theme-secondary1);
@@ -131,14 +131,14 @@
   justify-content: center;
   background-color: var(--dl-color-theme-primary1);
 }
- 
+
 .thq-button-filled:hover {
   fill: var(--dl-color-theme-secondary2);
   color: var(--dl-color-theme-secondary2);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
- 
+
 .thq-button-outline {
   gap: var(--dl-layout-space-halfunit);
   fill: var(--dl-color-theme-primary1);
@@ -158,14 +158,14 @@
   padding-bottom: var(--dl-layout-space-halfunit);
   justify-content: center;
 }
- 
+
 .thq-button-outline:hover {
   fill: var(--dl-color-theme-secondary2);
   color: var(--dl-color-theme-secondary2);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
- 
+
 .thq-button-flat {
   gap: var(--dl-layout-space-halfunit);
   fill: var(--dl-color-theme-primary1);
@@ -185,54 +185,54 @@
   padding-bottom: var(--dl-layout-space-halfunit);
   justify-content: center;
 }
- 
+
 .thq-button-flat:hover {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
- 
+
 .thq-heading-1 {
   font-size: 48px;
   font-family: STIX Two Text;
   font-weight: 700;
   line-height: 1.5;
 }
- 
+
 .thq-heading-2 {
   font-size: 35px;
   font-family: STIX Two Text;
   font-weight: 600;
   line-height: 1.5;
 }
- 
+
 .thq-heading-3 {
   font-size: 26px;
   font-family: STIX Two Text;
   font-weight: 600;
   line-height: 1.5;
 }
- 
+
 .thq-body-large {
   font-size: 18px;
   font-family: Noto Sans;
   line-height: 1.5;
 }
- 
+
 .thq-body-small {
   font-size: 16px;
   font-family: Noto Sans;
   line-height: 1.5;
 }
- 
+
 .thq-team-image-round {
   width: 80px;
   height: 80px;
   object-fit: cover;
   border-radius: 50%;
 }
- 
+
 .thq-section-padding {
   width: 100%;
   display: flex;
@@ -241,45 +241,45 @@
   align-items: center;
   flex-direction: column;
 }
- 
+
 .thq-section-max-width {
   width: 100%;
   max-width: var(--dl-layout-size-maxwidth);
 }
- 
+
 .thq-img-ratio-1-1 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 1/1;
   border-radius: var(--dl-layout-radius-imageradius);
 }
- 
+
 .thq-img-ratio-16-9 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 16/9;
   border-radius: var(--dl-layout-radius-imageradius);
 }
- 
+
 .thq-img-ratio-4-3 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 4/3;
   border-radius: var(--dl-layout-radius-imageradius);
 }
- 
+
 .thq-img-ratio-4-6 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 4/6;
   border-radius: var(--dl-layout-radius-imageradius);
 }
- 
+
 .thq-img-round {
   width: 100%;
   border-radius: var(--dl-layout-radius-round);
 }
- 
+
 .thq-flex-column {
   gap: var(--dl-layout-space-twounits);
   display: flex;
@@ -288,7 +288,7 @@
   align-items: center;
   flex-direction: column;
 }
- 
+
 .thq-flex-row {
   gap: var(--dl-layout-space-twounits);
   display: flex;
@@ -296,19 +296,19 @@
   position: relative;
   align-items: center;
 }
- 
+
 .thq-grid-6 {
   display: grid;
   grid-gap: var(--dl-layout-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
- 
+
 .thq-grid-5 {
   display: grid;
   grid-gap: var(--dl-layout-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
- 
+
 .thq-card {
   gap: var(--dl-layout-space-oneandhalfunits);
   display: flex;
@@ -317,35 +317,35 @@
   border-radius: var(--dl-layout-radius-cardradius);
   flex-direction: column;
 }
- 
+
 .thq-box-shadow {
   box-shadow: 0px 0px 5px -2px var(--dl-color-theme-neutral-dark);
 }
- 
+
 .thq-grid-3 {
   display: grid;
   grid-gap: var(--dl-layout-space-twounits);
   grid-template-columns: 1fr 1fr 1fr;
 }
- 
+
 .thq-grid-4 {
   display: grid;
   grid-gap: var(--dl-layout-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
- 
+
 .thq-grid-2 {
   width: 100%;
   display: grid;
   grid-gap: var(--dl-layout-space-twounits);
   grid-template-columns: 1fr 1fr;
 }
- 
+
 .thq-checkbox {
   width: var(--dl-layout-size-xsmall);
   height: var(--dl-layout-size-xsmall);
 }
- 
+
 .thq-select {
   cursor: pointer;
   appearance: none;
@@ -355,48 +355,52 @@
   padding-right: var(--dl-layout-space-twounits);
   padding-bottom: var(--dl-layout-space-halfunit);
   background-color: var(--dl-color-theme-neutral-light);
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg width%3D%2220%22 height%3D%2220%22 xmlns%3D%22http%3A//www.w3.org/2000/svg%22 viewBox%3D%220 0 20 20%22 fill%3D%22%23000%22%3E%3Cpath d%3D%22M4.293 7.293a1 1 0 011.414 0L10 11.586l4.293-4.293a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414z%22/%3E%3C/svg%3E');
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg width%3D%2220%22 height%3D%2220%22 xmlns%3D%22http%3A//www.w3.org/2000/svg%22 viewBox%3D%220 0 20 20%22 fill%3D%22%23000%22%3E%3Cpath d%3D%22M4.293 7.293a1 1 0 011.414 0L10 11.586l4.293-4.293a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414z%22/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 8px center;
 }
- 
+
 .thq-divider-horizontal {
   width: 100%;
   height: 1px;
   background-color: var(--dl-color-theme-neutral-dark);
 }
- 
+
 .thq-icon-small {
   width: 24px;
   height: 24px;
 }
- 
+
 .thq-button-icon {
   fill: var(--dl-color-theme-secondary1);
   padding: 3px;
   transition: 0.3s;
   border-radius: var(--dl-layout-radius-round);
 }
- 
+
 .thq-button-icon:hover {
   fill: var(--dl-color-theme-secondary2);
 }
- 
+
 .thq-icon-medium {
   width: var(--dl-layout-size-small);
   height: var(--dl-layout-size-small);
 }
- 
+
 .thq-icon-x-small {
   width: var(--dl-layout-size-xsmall);
   height: var(--dl-layout-size-xsmall);
 }
- 
+
 .thq-link {
   cursor: pointer;
   display: inline-block;
   overflow: hidden;
-  background: linear-gradient(to right, var(--dl-color-theme-primary1) 50%, var(--dl-color-theme-neutral-dark) 50%);
+  background: linear-gradient(
+    to right,
+    var(--dl-color-theme-primary1) 50%,
+    var(--dl-color-theme-neutral-dark) 50%
+  );
   transition: background-position 300ms ease;
   font-weight: 600;
   background-clip: text;
@@ -404,17 +408,17 @@
   background-position: 100%;
   -webkit-text-fill-color: transparent;
 }
- 
+
 .thq-link:hover {
   background-position: 0 100%;
 }
- 
+
 .thq-grid-auto-300 {
   display: grid;
   grid-gap: var(--dl-layout-space-oneandhalfunits);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
- 
+
 .thq-animated-group-vertical-reverse {
   gap: var(--dl-layout-space-unit);
   width: 100%;
@@ -425,7 +429,7 @@
   justify-content: space-around;
   animation-direction: reverse;
 }
- 
+
 .thq-animated-group-horizontal-reverse {
   gap: var(--dl-layout-space-unit);
   display: flex;
@@ -436,7 +440,7 @@
   justify-content: space-around;
   animation-direction: reverse;
 }
- 
+
 .thq-animated-group-vertical {
   gap: var(--dl-layout-space-unit);
   width: 100%;
@@ -446,7 +450,7 @@
   flex-direction: column;
   justify-content: space-around;
 }
- 
+
 .thq-animated-group-horizontal {
   gap: var(--dl-layout-space-unit);
   display: flex;
@@ -456,36 +460,48 @@
   flex-shrink: 0;
   justify-content: space-around;
 }
- 
+
 .thq-animated-group-container-vertical {
   gap: var(--dl-layout-space-unit);
   display: flex;
   overflow: hidden;
   flex-direction: column;
 }
- 
+
 .thq-animated-group-container-horizontal {
   gap: var(--dl-layout-space-unit);
   display: flex;
   overflow: hidden;
 }
- 
+
 .thq-mask-image-vertical {
-  mask-image: linear-gradient(to bottom, transparent, black 1%, black 99%, transparent);
+  mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    black 1%,
+    black 99%,
+    transparent
+  );
 }
- 
+
 .thq-mask-image-horizontal {
-  mask-image: linear-gradient(to right, transparent, black 1%, black 99%, transparent);
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 1%,
+    black 99%,
+    transparent
+  );
 }
- 
+
 .thq-img-scale {
   transition: 0.3s;
 }
- 
+
 .thq-img-scale:hover {
   scale: 1.05;
 }
- 
+
 .thq-animated-card-bg-1 {
   width: 100%;
   height: 100%;
@@ -493,13 +509,13 @@
   border-radius: var(--dl-layout-radius-cardradius);
   background-color: var(--dl-color-theme-accent1);
 }
- 
+
 .thq-animated-card-bg-2 {
   transition: transform 0.3s;
   border-radius: var(--dl-layout-radius-cardradius);
   background-color: var(--dl-color-theme-accent2);
 }
- 
+
 .thq-button-animated {
   outline: none;
   z-index: 1;
@@ -507,28 +523,30 @@
   position: relative;
   border-width: 2px;
 }
- 
+
 .thq-input::placeholder {
   text-align: center;
   vertical-align: middle;
 }
- 
+
 .thq-animated-group-container-vertical:hover div {
   animation-play-state: paused;
 }
- 
+
 .thq-animated-group-container-horizontal:hover div {
   animation-play-state: paused;
 }
- 
+
 .thq-animated-card-bg-2:has([data-animated="true"]:hover) {
-  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(3deg) skew(0deg, 0deg);
+  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg)
+    rotateY(0deg) rotateZ(3deg) skew(0deg, 0deg);
 }
- 
+
 .thq-animated-card-bg-1:has([data-animated="true"]:hover) {
-  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-6deg) skew(0deg, 0deg);
+  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg)
+    rotateY(0deg) rotateZ(-6deg) skew(0deg, 0deg);
 }
- 
+
 .thq-button-animated:before {
   top: 0;
   left: -20%;
@@ -545,13 +563,13 @@
   transform-origin: 0 0;
   transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
 }
- 
+
 .thq-button-animated:hover::before {
   color: var(--dl-color-theme-neutral-light);
   z-index: -1;
   transform: scaleX(1);
 }
- 
+
 .Content {
   font-size: 16px;
   font-family: Inter;
@@ -560,7 +578,7 @@
   text-transform: none;
   text-decoration: none;
 }
- 
+
 .Saol_64pt_regular {
   font-size: 64px;
   font-style: normal;
@@ -569,7 +587,7 @@
   font-stretch: normal;
   letter-spacing: -0.03em;
 }
- 
+
 .H1 {
   font-size: 105px;
   font-style: normal;
@@ -578,7 +596,7 @@
   font-stretch: normal;
   letter-spacing: -0.03em;
 }
- 
+
 .H2 {
   font-size: 85px;
   font-style: normal;
@@ -587,7 +605,7 @@
   font-stretch: normal;
   letter-spacing: -0.03em;
 }
- 
+
 .BTBeauSans_32pt_regular {
   font-size: 32px;
   font-style: normal;
@@ -596,7 +614,7 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
+
 .Saol_24pt_regular {
   font-size: 24px;
   font-style: normal;
@@ -605,7 +623,7 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
+
 .BTBeauSans_20pt_regular {
   font-size: 20px;
   font-style: normal;
@@ -614,7 +632,7 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
+
 .H5 {
   font-size: 20px;
   font-style: normal;
@@ -623,7 +641,7 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
+
 .BTBeauSans_16pt_regular {
   font-size: 16px;
   font-style: normal;
@@ -632,7 +650,7 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
+
 .BTBeauSans_12pt_regular {
   font-size: 12px;
   font-style: normal;
@@ -641,14 +659,14 @@
   font-stretch: normal;
   letter-spacing: 0em;
 }
- 
-@media(max-width: 991px) {
+
+@media (max-width: 991px) {
   .thq-grid-4 {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
- 
-@media(max-width: 767px) {
+
+@media (max-width: 767px) {
   .thq-section-padding {
     padding: var(--dl-layout-space-threeunits);
   }
@@ -686,8 +704,8 @@
     width: 100%;
   }
 }
- 
-@media(max-width: 479px) {
+
+@media (max-width: 479px) {
   .thq-section-padding {
     padding: var(--dl-layout-space-oneandhalfunits);
   }
